fix: table of content text wraps

--- a/assets/css/components/_aside.scss
+++ b/assets/css/components/_aside.scss
@@ -18,6 +18,8 @@ aside {
         line-height: rem(34);
         margin: 0 0 rem(23) 0;
         padding-left: rem(30);
+        width: rem(151);
+        word-wrap: break-word;
 
         &:active {
           border-left: rem(5) solid #465d8b;
